Updated services hover dropdown

--- a/index.html
+++ b/index.html
@@ -82,7 +82,19 @@
       <nav class="primary-nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu"><span class="nav-toggle__bar"></span></button>
         <ul id="nav-menu">
-          <li><a href="/services/" aria-label="Services">Services</a></li>
+          <li class="has-dropdown">
+            <a href="/services/" aria-label="Services">Services</a>
+            <ul class="dropdown">
+              <li><a href="/services/cabinet-repair-toronto/">Cabinet &amp; hardware</a></li>
+              <li><a href="/services/punch-list/">Punch-list help</a></li>
+              <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
+              <li><a href="/services/doors-trim/">Doors &amp; trim</a></li>
+              <li><a href="/services/mount-artwork-tv/">Mount artwork or TV</a></li>
+              <li><a href="/services/small-jobs/">Various small jobs</a></li>
+              <li><a href="/services/lock-replacement/">Lock replacement</a></li>
+              <li><a href="/services/curtain-rod-installation/">Curtain rod installation</a></li>
+            </ul>
+          </li>
           <li><a href="/before-after/">Before &amp; After</a></li>
           <li><a href="#trust">Why ReadyFix</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -259,6 +271,26 @@
         <div class="cta-band__actions">
           <a class="btn" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
           <a class="btn btn--ghost btn--ghost--dark" href="#contact">Send project details</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="proof" aria-labelledby="social-proof-title">
+      <div class="section-inner proof__grid">
+        <div>
+          <p class="eyebrow">Find us across the web</p>
+          <h2 id="social-proof-title">See ReadyFix on trusted platforms</h2>
+          <p>Check out our profiles to read customer experiences and reviews.</p>
+        </div>
+        <div class="proof-card">
+          <h3>Google Business Profile</h3>
+          <p>See photos, updates, and reviews from Toronto homeowners.</p>
+          <a class="btn btn--ghost btn--small" href="https://share.google/BU0j2GIH2rZ478ASk" target="_blank" rel="noopener">View on Google</a>
+        </div>
+        <div class="proof-card">
+          <h3>HomeStars</h3>
+          <p>Browse our HomeStars listing for ratings and recent projects.</p>
+          <a class="btn btn--ghost btn--small" href="https://www.homestars.com/profile/ready-fix-handyman-services" target="_blank" rel="noopener">View on HomeStars</a>
         </div>
       </div>
     </section>
