--- a/services/index.html
+++ b/services/index.html
@@ -33,7 +33,19 @@
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu"><span class="nav-toggle__bar"></span></button>
         <ul id="nav-menu">
           <li><a href="/">Home</a></li>
-          <li><a href="/services/" aria-label="Services" aria-current="page">Services</a></li>
+          <li class="has-dropdown">
+            <a href="/services/" aria-label="Services" aria-current="page">Services</a>
+            <ul class="dropdown">
+              <li><a href="/services/cabinet-repair-toronto/">Cabinet &amp; hardware</a></li>
+              <li><a href="/services/punch-list/">Punch-list help</a></li>
+              <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
+              <li><a href="/services/doors-trim/">Doors &amp; trim</a></li>
+              <li><a href="/services/mount-artwork-tv/">Mount artwork or TV</a></li>
+              <li><a href="/services/small-jobs/">Various small jobs</a></li>
+              <li><a href="/services/lock-replacement/">Lock replacement</a></li>
+              <li><a href="/services/curtain-rod-installation/">Curtain rod installation</a></li>
+            </ul>
+          </li>
         </ul>
       </nav>
       <a class="btn btn--ghost" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
