--- a/services/mount-artwork-tv/index.html
+++ b/services/mount-artwork-tv/index.html
@@ -32,11 +32,23 @@
       <nav class="primary-nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu"><span class="nav-toggle__bar"></span></button>
         <ul id="nav-menu">
-          <li><a href="/services/" aria-label="Services">Services</a></li>
-          <li><a href="/before-after/">Before &amp; After</a></li>
-          <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
-          <li><a href="/">Home</a></li>
-        </ul>
+          <li class="has-dropdown">
+            <a href="/services/" aria-label="Services">Services</a>
+            <ul class="dropdown">
+              <li><a href="/services/cabinet-repair-toronto/">Cabinet &amp; hardware</a></li>
+              <li><a href="/services/punch-list/">Punch-list help</a></li>
+              <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
+              <li><a href="/services/doors-trim/">Doors &amp; trim</a></li>
+              <li><a href="/services/mount-artwork-tv/" aria-current="page">Mount artwork or TV</a></li>
+              <li><a href="/services/small-jobs/">Various small jobs</a></li>
+              <li><a href="/services/lock-replacement/">Lock replacement</a></li>
+              <li><a href="/services/curtain-rod-installation/">Curtain rod installation</a></li>
+            </ul>
+          </li>
+         <li><a href="/before-after/">Before &amp; After</a></li>
+         <li><a href="/services/drywall-repair-toronto/">Drywall repair</a></li>
+         <li><a href="/">Home</a></li>
+       </ul>
       </nav>
       <a class="btn btn--ghost" data-track="cta:call" href="tel:6476994607">647-699-4607</a>
     </div>
